@@ -1,9 +1,7 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.javamodularity.moduleplugin' version '1.8.12'
-    id 'org.openjfx.javafxplugin' version '0.1.0' // Update from 0.0.13
-    id 'org.beryx.jlink' version '3.0.1' // Update from 2.25.0
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group 'iuh.fit.qlksfxapp'
@@ -26,17 +24,7 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 application {
-    mainModule = 'iuh.fit.qlksfxapp'
     mainClass = 'iuh.fit.qlksfxapp.Main'
-}
-
-run {
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml,javafx.web,javafx.swing'
-        ]
-    }
 }
 
 javafx {
@@ -45,56 +33,53 @@ javafx {
 }
 
 dependencies {
-    implementation('org.controlsfx:controlsfx:11.2.1')
+    implementation 'org.controlsfx:controlsfx:11.2.1'
     implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
-        exclude(group: 'org.openjfx')
+        exclude group: 'org.openjfx'
     }
     implementation('net.synedra:validatorfx:0.5.0') {
-        exclude(group: 'org.openjfx')
+        exclude group: 'org.openjfx'
     }
-    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
-    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
+    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
+    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
     implementation('eu.hansolo:tilesfx:21.0.3') {
-        exclude(group: 'org.openjfx')
+        exclude group: 'org.openjfx'
     }
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
-    implementation 'org.openjfx:javafx-controls:23.0.1'
-    implementation 'org.openjfx:javafx-fxml:23.0.1'
-    implementation 'org.openjfx:javafx-web:23.0.1'
-    implementation 'org.openjfx:javafx-swing:23.0.1'
-
-    implementation 'org.hibernate.orm:hibernate-core:6.4.1.Final'
-    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
+    // Jakarta EE and Hibernate 6.x dependencies
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+    implementation 'org.hibernate.orm:hibernate-core:6.4.1.Final'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+    implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.4'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.1'
+    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+    implementation 'jakarta.transaction:jakarta.transaction-api:2.0.1'
 
+    // Database
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
+
+    // Logging
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation 'org.slf4j:slf4j-simple:2.0.9'
+
+    // Utilities
     implementation 'org.reflections:reflections:0.10.2'
     implementation 'net.datafaker:datafaker:2.4.2'
 
+    // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.36'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
-
-    // Add Lombok for test sources
     testCompileOnly 'org.projectlombok:lombok:1.18.36'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
-
-    implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
-    implementation 'org.hibernate.validator:hibernate-validator:8.0.2.Final'
 }
 
 test {
     useJUnitPlatform()
-}
-
-jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'app'
-    }
-}
-
-jlinkZip {
-    group = 'distribution'
 }
